# AMHP_DEMO

./: README.md
AMHLPlus/: pom.xml
AMHLPlus/src/main/java/: config.properties  configBakup.properties
AMHLPlus/src/main/java/client/: ClientNode.java  NoPaddingClientNode.java
AMHLPlus/src/main/java/contract/: ChannelState.java  Partner.java
AMHLPlus/src/main/java/encryption/: AESEncryption.java  DiscreteLogarithmTool.java  ECElGamalEncryption.java  RSAEncryption.java  RSATemp.java  RandomLetter.java
AMHLPlus/src/main/java/node/: NoPaddingRelayNode.java  RelayNode.java
AMHLPlus/src/main/java/server/: NoPaddingServerNode.java  ServerNode.java
AMHLPlus/src/main/java/tools/: InitProperty.java  MyJson.java  MyUtils.java
AMHLPlus/src/main/java/web3j/: Signature.java
AMHLPlus/src/test/java/encryption/: AESEncryptionTest.java  DLPTest.java  ECElGamalEncryptionTest.java  RSAEncryptionTest.java  RSATempTest.java  RandomLetterTest.java
AMHLPlus/src/test/java/onionMessage/: OnionMessageTest.java
EAMHLPlus/: Message格式.md  pom.xml
EAMHLPlus/bn128-jni/: test.py
EAMHLPlus/bn128-jni/native/bn/: .travis.yml  Cargo.toml
EAMHLPlus/bn128-jni/native/bn-jni/: Cargo.toml
EAMHLPlus/bn128-jni/native/bn/benches/: api.rs
EAMHLPlus/bn128-jni/native/bn/examples/: joux.rs
EAMHLPlus/bn128-jni/native/bn/src/: arith.rs  lib.rs
EAMHLPlus/bn128-jni/native/bn/src/fields/: fp.rs  fq12.rs  fq2.rs  mod.rs  tests.rs
EAMHLPlus/bn128-jni/native/bn/src/groups/: mod.rs  tests.rs
EAMHLPlus/src/main/java/: config.properties  test.properties
(+41 files in other folders)
